<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_version">0.1.0</string>
    <string name="app_name">DroidLife game</string>

    <string name="hello">Hello World, LifeGameActivity!</string>
    <string name="settings_act_name">Life Game Settings</string>
    <string name="conf_save_act_name">Life Game ConfSave</string>
    <string name="runBtnLabel">Пуск</string>
    <string name="stopBtnLabel">Стоп</string>
    <string name="stepBtnLabel">Шаг</string>
    <string name="clearBtnLabel">Очистить</string>
    <string name="resetBtnLabel">Сброс</string>
    <string name="genCountLabel">Поколение: </string>
    <string name="intervalSettingLabel">Интервал шага, мс</string>
    <string name="customRulesCheckBoxLabel">Пользовательские правила</string>
    <string name="neighsToAliveSettingLabel">Соседей для оживания</string>
    <string name="minNeighsToLiveSettingLabel">Мин. соседей для жизни</string>
    <string name="maxNeighsToLiveSettingLabel">Макс. соседей для жизни</string>
    
    <string name="miClear">Очистить</string>
    <string name="miSettings">Настройки</string>
    <string name="miSaveConf">Сохранить</string>
    <string name="miAbout">О программе</string>
    
    <string name="settingsConfirmBtnLabel">Применить</string>
    <string name="settingsCancelBtnLabel">Отмена</string>
    <string name="confSaveLoadNameLabel">Введите имя конфигурации</string>
    <string name="confChooseBtnLabel">...</string>
    <string name="confSaveBtnLabel">Сохранить</string>
    <string name="confLoadBtnLabel">Загрузить</string>
    <string name="confDeleteBtnLabel">Удалить</string>
    <string name="confCancelBtnLabel">Отмена</string>
    <string name="confNameChoiceDialogTitle">Выберите имя конфигурации</string>
    <string name="confRewriteAcceptLabel">Да</string>
    <string name="confRewriteRejectLabel">Отмена</string>
    <string name="confDeleteAcceptLabel">Да</string>
    <string name="confDeleteRejectLabel">Отмена</string>
    <string name="confNoConfOKLabel">OK</string>
    <string name="aboutCloseBtnLabel">Закрыть</string>
    
    
    <string name="confSavedMsg">Конфигурация сохранена</string>
    <string name="confSaveErrorMsg">Ошибка сохранения</string>
    <string name="confLoadedMsg">Конфигурация загружена</string>
    <string name="confLoadErrorMsg">Ошибка загрузки</string>
    <string name="confDeletedMsg">Конфигурация удалена</string>
    <string name="confRewriteMsg">Перезаписать существующую конфигурацию?</string>
    <string name="confDeleteMsg">Подтвердите удаление конфигурации</string>
    <string name="confNoConfMsg">Выбраной конфигурации не существует</string>
</resources>
