<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootConfSaveLoadView"
    android:orientation="vertical" 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confSaveLoadNameLabel"
        android:textSize="16dp"
        android:enabled="false"
        />
      
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5px"
        >
                
        <EditText
            android:id="@+id/confSaveEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:enabled="true"
            
            />
        <Button
            android:id="@+id/confChooseBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confChooseBtnLabel"
            android:layout_weight="1"
            />            
    </LinearLayout>              


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"  
        >  
        <Button
            android:id="@+id/confSaveBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/confSaveBtnLabel"
            />
        <Button
            android:id="@+id/confLoadBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/confLoadBtnLabel"
            />
        <Button
            android:id="@+id/confDeleteBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/confDeleteBtnLabel"
            />
    </LinearLayout>  

    <Button
        android:id="@+id/confCancelBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confCancelBtnLabel"
        />

    
</LinearLayout>

